/*
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at https://mozilla.org/MPL/2.0/.
 *
 * Copyright (c) 2022-2024 Matthias Emde
 *
 * Parts of this software are licensed under the MIT license
 *
 * Copyright (c) 2022, Javier Carbone, author Matthias Emde
 */

package app.musikus.core.presentation.utils

object TestTags {
    const val FOLDER_DIALOG_NAME_INPUT = "FOLDER_DIALOG_NAME_INPUT"
    const val ITEM_DIALOG_NAME_INPUT = "ITEM_DIALOG_NAME_INPUT"
    const val ITEM_DIALOG_FOLDER_SELECTOR_DROPDOWN = "ITEM_DIALOG_FOLDER_SELECTOR_DROPDOWN"
    const val FOLDER_LIST = "FOLDER_LIST"

    const val GOAL_DIALOG_PERIOD_UNIT_SELECTOR_DROPDOWN = "GOAL_DIALOG_PERIOD_UNIT_SELECTOR_DROPDOWN"
    const val GOAL_DIALOG_ITEM_SELECTOR_DROPDOWN = "GOAL_DIALOG_ITEM_SELECTOR_DROPDOWN"
}
