...
    <string name="components_top_bar_back_description">Back</string>

    <!-- ActionBar -->
    <string name="components_action_bar_title">%1$d items selected</string>
    <string name="components_action_bar_back_button_description">Back</string>
    <string name="components_action_bar_edit_button_description">Edit</string>
    <string name="components_action_bar_delete_button_description">Delete</string>
    <string name="components_action_bar_archive_button_description">Archive</string>

    <!-- BottomBar -->
    <string name="components_bottom_bar_items_sessions">Sessions</string>
    <string name="components_bottom_bar_items_goals">Goals</string>
    <string name="components_bottom_bar_items_statistics">Statistics</string>
...
